--- a/recolector/templates/recolector/agregar.html
+++ b/recolector/templates/recolector/agregar.html
@@ -8,7 +8,7 @@
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
-      <h2>Productor</h2>
+      <h2>Recolectores</h2>
       <p>Seccion para agregar productor con minimo una finca</p>
     </div>
     <form method="post" class="php-email-form">
