--- a/recolector/templates/recolector/editar.html
+++ b/recolector/templates/recolector/editar.html
@@ -28,7 +28,7 @@
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
-      <h2>Editar Productor</h2>
+      <h2>Editar Recolector</h2>
       <p>Seccion para editar o eliminar el productor</p>
     </div>
     <form method="post" class="php-email-form">
