--- a/recolector/templates/recolector/mostrar.html
+++ b/recolector/templates/recolector/mostrar.html
@@ -7,7 +7,7 @@
     <div class="container" data-aos="fade-up">
 
       <div class="section-title">
-        <h2>Productores</h2>
+        <h2>Recolectores</h2>
         <p>En el carrucel encontrara los productores que estan en el sistema</p>
       </div>
 
