--- a/recolector/templates/recolector/mostrar.html
+++ b/recolector/templates/recolector/mostrar.html
@@ -8,22 +8,22 @@
 
       <div class="section-title">
         <h2>Recolectores</h2>
-        <p>En el carrucel encontrara los productores que estan en el sistema</p>
+        <p>En el carrucel encontrara los Recolectores registrados en el sistema</p>
       </div>
 
       <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
         <div class="swiper-wrapper">
             
-            {% for productor in productores %}
+            {% for recolector in recolectores %}
 
           <div class="swiper-slide">
             <div class="testimonial-item">
               
-              <h3>{{productor.nombres}} {{productor.apellidos}}</h3>
-              <h4>C.C {{productor.cedula}}</h4>
+              <h3>{{recolector.nombres}} {{recolector.apellidos}}</h3>
+              <h4>C.C {{recolector.cedula}}</h4>
               <p>
                 <i class='bx bx-show'></i> <a href="#" class="get-started-btn">Ver Fincas</a><br>
-                <i class='bx bxs-edit-alt' ></i> <a href="{% url 'verproductor' productor.pk %}" class="get-started-btn">Ver Informacion</a>
+                <i class='bx bxs-edit-alt' ></i> <a href="{% url 'verrecolector' recolector.pk %}" class="get-started-btn">Ver Informacion</a>
               </p>
             </div>
         </div>
