--- a/productor/templates/productor/editar.html
+++ b/productor/templates/productor/editar.html
@@ -17,7 +17,7 @@
       })
       .then(function(result){
           if(result.isConfirmed){
-              window.location.href = "/eliminarproducto/"+productor.pk
+            window.location.href = "http://"+window.location.host+"/productor/delete/"+id
           }
       })
   }
