--- a/recolector/templates/recolector/agregar.html
+++ b/recolector/templates/recolector/agregar.html
@@ -37,17 +37,17 @@
           <div class="form-group mt-3">
             <input placeholder="Fecha nacimiento*" type="date" class="form-control" name="fnacimiento" id="fnacimiento" min="2005-01-01" required>
           </div>
-          
+          <div class="text-center"><button type="submit">Agregar</button></div>
         
         </div>
 
       <div class="col-lg-6">
         
           <div class="form-group">
-            <h2>Datos Finca</h2>
+            <img src="{% static 'assets/img/reco1.jpeg' %}" class="img-fluid" alt="">
           </div>        
       </div>
-      <div class="text-center"><button type="submit">Agregar</button></div>
+      
       {% comment %} <div class="my-3">
         <div class="loading">Loading</div>
         <div class="error-message"></div>
