--- a/finca/templates/finca/editar.html
+++ b/finca/templates/finca/editar.html
@@ -17,7 +17,7 @@
       })
       .then(function(result){
           if(result.isConfirmed){
-              window.location.href = "/eliminarproducto/"+productor.pk
+            window.location.href = "http://"+window.location.host+"/finca/delete/"+id
           }
       })
   }
@@ -71,7 +71,7 @@
         </div>
 
         <div class="text-center"><button type="submit">Editar</button></div>
-        <a class="btn btn-primary me-1" onclick="eliminarProducto({{productor.pk}})" role="button" aria-expanded="false" aria-controls="collapseExample"><i class='bx bx-edit me-1' ></i>Eliminar</a>
+        <a class="btn btn-primary me-1" onclick="eliminarProducto({{finca.pk}})" role="button" aria-expanded="false" aria-controls="collapseExample"><i class='bx bx-edit me-1' ></i>Eliminar</a>
 
       {% comment %} <div class="my-3">
         <div class="loading">Loading</div>
