--- a/mainapp/templates/layouts/layout.html
+++ b/mainapp/templates/layouts/layout.html
@@ -183,6 +183,10 @@
   <!-- Template Main JS File -->
   <script src="{% static 'assets/js/main.js'%}"></script>
 
+  {% comment %} libreria sweetaler para alertas profesionales {% endcomment %}
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
 </body>
 
 </html>
