--- a/mainapp/templates/layouts/layout.html
+++ b/mainapp/templates/layouts/layout.html
@@ -51,7 +51,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="{% url 'inicio' %}">Home</a></li>
+          <li><a class="nav-link scrollto active" href="{% url 'inicio' %}">Inicio</a></li>
           <li class="dropdown"><a href="{% url 'productores' %}"><span>Productor</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="{% url 'agregarproductor' %}">Agregar</a></li>
@@ -66,8 +66,6 @@
               <li><a href="{% url 'agregarrecolector' %}">Eliminar</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#features">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -95,10 +93,10 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>Recibir Noticias</h4>
+            <p>Si desea recibir notificaciones, noticias o novedades de la produccion de leche, puede subcribirse con su correo electronico.</p>
             <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
+              <input type="email" name="email"><input type="submit" value="Subscribete">
             </form>
           </div>
         </div>
