--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -24,43 +24,43 @@
   <div class="container">
 
     <div class="section-title">
-      <h2>App Features</h2>
-      <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+      <h2>Bienvenido</h2>
+      <p>Sistema de administracion de lacteos, donde se podran registrar recolectores, productores, pedidos de leche y ver las facturas de cada pedido.</p>
     </div>
-
+    
     <div class="row no-gutters">
       <div class="col-xl-7 d-flex align-items-stretch order-2 order-lg-1">
         <div class="content d-flex flex-column justify-content-center">
           <div class="row">
             <div class="col-md-6 icon-box" data-aos="fade-up">
               <i class="bx bx-receipt"></i>
-              <h4>Corporis voluptates sit</h4>
-              <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+              <h4>Recolector</h4>
+              <p>Sera el encargado de hacer las recolecciones de leche y para su registro se deben diligenciar unicamente los datos personales.</p>
             </div>
             <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
               <i class="bx bx-cube-alt"></i>
-              <h4>Ullamco laboris nisi</h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+              <h4>Productor</h4>
+              <p>Sera quien haga un pedido de leche y para su registro se deben diligenciar sus datos personales y al menos una finca.</p>
             </div>
             <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
               <i class="bx bx-images"></i>
-              <h4>Labore consequatur</h4>
-              <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+              <h4>Finca</h4>
+              <p>Cada finca debera estar relacionada con un productor y para registrarla se necesitan unicamente el nombre de la finca, direccion y telefono.</p>
             </div>
             <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
               <i class="bx bx-shield"></i>
-              <h4>Beatae veritatis</h4>
-              <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+              <h4>Facturas</h4>
+              <p>Se podran visualizar las facturas en cada finca seleccionada segun los pedidos realizados.</p>
             </div>
             <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
               <i class="bx bx-atom"></i>
-              <h4>Molestiae dolor</h4>
-              <p>Et fuga et deserunt et enim. Dolorem architecto ratione tensa raptor marte</p>
+              <h4>Novedad</h4>
+              <p>En cada pedido realizado se puede presentar una novedad la cual se va a ver reflejada al momento de gestionar las facturas</p>
             </div>
             <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
               <i class="bx bx-id-card"></i>
-              <h4>Explicabo consectetur</h4>
-              <p>Est autem dicta beatae suscipit. Sint veritatis et sit quasi ab aut inventore</p>
+              <h4>Modificar Datos</h4>
+              <p>Se podra editar o eliminar los datos de los Recolectores, Productores y fincas.</p>
             </div>
           </div>
         </div>
