--- a/recolector/templates/recolector/editar.html
+++ b/recolector/templates/recolector/editar.html
@@ -70,16 +70,16 @@
             <input placeholder="Fecha nacimiento*" type="date" value="{{fecha_nacimiento|date:'Y-m-d'}}" class="form-control" name="fnacimiento" id="fnacimiento" min="2005-01-01" required>
           </div>
           
-          <div class="text-center"><button type="submit">Editar </button></div>
-        <a class="btn btn-primary me-1"
-                                    onclick="eliminarProducto({{recolector.pk}})"
-                                    role="button"
-                                    aria-expanded="false"
-                                    aria-controls="collapseExample"
-                                    ><i class='bx bx-edit me-1' ></i>
-                                    Eliminar {{recolector.pk}}
-        </a>
-        
+          <div class="text-center"><button type="submit">Editar </button>
+          <a class="btn btn-primary me-1"
+                                      onclick="eliminarProducto({{recolector.pk}})"
+                                      role="button"
+                                      aria-expanded="false"
+                                      aria-controls="collapseExample"
+                                      ><i class='bx bx-edit me-1' ></i>
+                                      Eliminar {{recolector.pk}}
+          </a>
+          </div>
         </div>
 
         
