--- a/finca/templates/recoleccion/editar.html
+++ b/finca/templates/recoleccion/editar.html
@@ -17,7 +17,7 @@
       })
       .then(function(result){
           if(result.isConfirmed){
-              window.location.href = "/eliminarproducto/"+productor.pk
+              window.location.href = "http://"+window.location.host+"/recibo/delete/"+id
           }
       })
   }
@@ -38,7 +38,7 @@
       <div class="col-lg-6">
         
         <div class="form-group">
-          <h2>Datos Finca</h2>
+          <img src="{% static 'assets/img/reco1.jpeg' %}" class="img-fluid" alt="">
         </div>
         
         
@@ -48,31 +48,35 @@
 
         <div class="col-lg-6">
           <div class="form-group">
-            <h2>Datos Finca</h2>
+            <h2>Facturas de Recoleccion</h2>
           </div>
-          <div class="form-group mt-3">
-            <input placeholder="Nombre*" type="text" class="form-control" value="{{finca.nombre}}" name="nombref" id="nombref" required>
-          </div>
-          <div class="form-group mt-3">
-            <input placeholder="Direccion*" type="text" class="form-control" value="{{finca.direccion}}" name="direccionf" id="direccionf" required>
-          </div>
-          <div class="form-group mt-3">
-            <input placeholder="telefono" type="text" class="form-control" value="{{finca.telefono}}" name="telefonof" id="telefonof" >
-          </div>
-          <div class="form-group mt-3">
-            
-            <select name="productorf" class="form-control">
-              {% for productor in productores %}
-                <option value="{{productor.pk}}" {% if finca.productor.pk == productor.pk %} selected {% endif %} >{{productor.nombres}} {{productor.apellidos}}</option>
-              {% endfor %}
-            </select>
-          </div>
+          <table class="table table-striped">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col"># Litros</th>
+                <th scope="col">Precio Litro</th>
+                <th scope="col">Precio Total</th> 
+              </tr>
+            </thead>
+            <tbody class="table-group-divider">
+                {%for litro in litros%}
+                <tr>
+                    <td>{{ forloop.counter}}</td>
+                    <td>{{ litro.cantidad}}</td>
+                    <td>{{ 7000 }}</td>
+                    <td>{{ litro.precioLitro}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+          </table>
         
         </div>
 
-        <div class="text-center"><button type="submit">Editar</button></div>
+        <div class="text-center"><button type="submit">Editar</button>
         <a class="btn btn-primary me-1" onclick="eliminarProducto({{productor.pk}})" role="button" aria-expanded="false" aria-controls="collapseExample"><i class='bx bx-edit me-1' ></i>Eliminar</a>
-
+        </div>
+      </div>
       {% comment %} <div class="my-3">
         <div class="loading">Loading</div>
         <div class="error-message"></div>
