--- a/productor/templates/productor/editar.html
+++ b/productor/templates/productor/editar.html
@@ -38,7 +38,7 @@
       <div class="col-lg-6">
         
         <div class="form-group">
-          <h2>Datos Finca</h2>
+          <img src="{% static 'assets/img/reco1.jpeg' %}" class="img-fluid" alt="">
         </div>
         
         
@@ -68,13 +68,11 @@
           <div class="form-group mt-3">
             <input placeholder="Fecha nacimiento*" type="date" value="{{fecha_nacimiento|date:'Y-m-d'}}" class="form-control" name="fnacimiento" id="fnacimiento" min="2005-01-01" required>
           </div>
-          
-        
-        </div>
 
-        <div class="text-center"><button type="submit">Editar</button></div>
-        <a class="btn btn-primary me-1" onclick="eliminarProducto({{productor.pk}})" role="button" aria-expanded="false" aria-controls="collapseExample"><i class='bx bx-edit me-1' ></i>Eliminar</a>
-
+        <div class="text-center"><button type="submit">Editar</button>
+        <a class="btn btn-primary me-1" onclick="eliminarProducto({{productor.pk}})" role="button" aria-expanded="false" aria-controls="collapseExample"><i class='bx bx-edit me-1' ></i>Eliminar {{productor.pk}}</a>
+        </div>    
+      </div>
       {% comment %} <div class="my-3">
         <div class="loading">Loading</div>
         <div class="error-message"></div>
