--- a/finca/templates/finca/agregar.html
+++ b/finca/templates/finca/agregar.html
@@ -41,9 +41,9 @@
           <div class="form-group mt-3">
             <input placeholder="productor" type="text" value="{{productor}}" class="form-control" name="productorf" id="productorf" disabled>
           </div>          
-        
+          <div class="text-center"><button type="submit"><i class="bi bi-person-add"></i> Agregar</button></div>
       </div>
-      <div class="text-center"><button type="submit">Agregar</button></div>
+      
       {% comment %} <div class="my-3">
         <div class="loading">Loading</div>
         <div class="error-message"></div>
