--- a/finca/templates/finca/editar.html
+++ b/finca/templates/finca/editar.html
@@ -67,12 +67,12 @@
               {% endfor %}
             </select>
           </div>
-        
+          <div class="text-center"><button type="submit"><i class='bx bx-edit me-1' ></i>Editar</button>
+          <a class="btn btn-outline-danger rounded-pill" onclick="eliminarProducto({{finca.pk}})" role="button" aria-expanded="false" aria-controls="collapseExample"><i class='bx bx-trash me-1' ></i>Eliminar</a>
+          </div>
         </div>
 
-        <div class="text-center"><button type="submit">Editar</button></div>
-        <a class="btn btn-primary me-1" onclick="eliminarProducto({{finca.pk}})" role="button" aria-expanded="false" aria-controls="collapseExample"><i class='bx bx-edit me-1' ></i>Eliminar</a>
-
+        
       {% comment %} <div class="my-3">
         <div class="loading">Loading</div>
         <div class="error-message"></div>
