--- a/finca/templates/finca/mostrar.html
+++ b/finca/templates/finca/mostrar.html
@@ -24,8 +24,8 @@
               <p>
                 <i class='bx bxs-edit-alt' ></i> <a href="{% url 'verfinca' finca.pk %}" class="get-started-btn">Ver Informacion</a><br>
                 <i class='bx bxs-add-to-queue'></i> <a href="{% url 'agregarfinca' productor.pk %}" class="get-started-btn">Agregar finca</a><br>
-                <i class='bx bx-water' ></i> <a href="{% url 'agregarrecoleccion' finca.pk %}" class="get-started-btn">Agregar pedido</a><br>
-                <i class='bx bx-water' ></i> <a href="{% url 'verrecoleccion' finca.pk %}" class="get-started-btn">ver pedido</a>
+                <i class='bi bi-cart-check' ></i> <a href="{% url 'agregarrecoleccion' finca.pk %}" class="get-started-btn">Agregar pedido</a><br>
+                <i class="bi bi-truck"></i> <a href="{% url 'verrecoleccion' finca.pk %}" class="get-started-btn">ver pedido</a>
               </p>
             </div>
         </div>
