--- a/finca/templates/recoleccion/agregar.html
+++ b/finca/templates/recoleccion/agregar.html
@@ -53,10 +53,10 @@
           <div class="form-group mt-3">
             <textarea placeholder="novedad" class="form-control" name="novedadf" rows="5" ></textarea>
           </div>
-                   
+          <div class="text-center"><button type="submit"><i class="bi bi-cart2"></i> Agregar</button></div>      
         
       </div>
-      <div class="text-center"><button type="submit">Agregar</button></div>
+      
       {% comment %} <div class="my-3">
         <div class="loading">Loading</div>
         <div class="error-message"></div>
