--- a/recolector/templates/recolector/agregar.html
+++ b/recolector/templates/recolector/agregar.html
@@ -37,7 +37,7 @@
           <div class="form-group mt-3">
             <input placeholder="Fecha nacimiento*" type="date" class="form-control" name="fnacimiento" id="fnacimiento" min="2005-01-01" required>
           </div>
-          <div class="text-center"><button type="submit">Agregar</button></div>
+          <div class="text-center"><button type="submit"><i class="bi bi-person-add"></i> Agregar</button></div>
         
         </div>
 
