--- a/finca/templates/recoleccion/editar.html
+++ b/finca/templates/recoleccion/editar.html
@@ -70,12 +70,12 @@
                 {% endfor %}
             </tbody>
           </table>
-        
+          <div class="text-center"><button type="submit"><i class='bx bx-edit me-1' ></i>Editar</button>
+            <a class="btn btn-outline-danger rounded-pill"  onclick="eliminarProducto({{productor.pk}})" role="button" aria-expanded="false" aria-controls="collapseExample"><i class='bx bx-trash me-1' ></i>Eliminar</a>
+            </div>
         </div>
 
-        <div class="text-center"><button type="submit">Editar</button>
-        <a class="btn btn-primary me-1" onclick="eliminarProducto({{productor.pk}})" role="button" aria-expanded="false" aria-controls="collapseExample"><i class='bx bx-edit me-1' ></i>Eliminar</a>
-        </div>
+        
       </div>
       {% comment %} <div class="my-3">
         <div class="loading">Loading</div>
