--- a/productor/templates/productor/agregar.html
+++ b/productor/templates/productor/agregar.html
@@ -59,7 +59,7 @@
           
         
       </div>
-      <div class="text-center"><button type="submit">Agregar</button></div>
+      <div class="text-center "><button type="submit"><i class="bi bi-person-add"></i> Agregar</button></div>
       {% comment %} <div class="my-3">
         <div class="loading">Loading</div>
         <div class="error-message"></div>
